--- a/css/styles.css
+++ b/css/styles.css
@@ -102,8 +102,7 @@ p{
 /* For LOGOS */
 /*pancake logo*/
 .pan{
-    top: 80px;
-    left: 25px;
+    transform: translate(25px, 80px);
     position: relative;
     background-color: #33292b;
     height: 15px;
@@ -111,8 +110,7 @@ p{
     border-radius: 0px 0px 30px 30px;
 }
 .panhandler{
-    top: 65px;
-    left: 120px;
+    transform: translate(121px, 65px);
     position: relative;
     background-color: #33292b;
     height: 8px;
@@ -120,8 +118,7 @@ p{
     border-radius: 0px 30px 30px 0px;
 }
 .panstack1{
-    top: 46px;
-    left: 25px;
+    transform: translate(25px, 46px);
     position: relative;
     background-color: #fbd490;
     height: 10px;
@@ -129,8 +126,7 @@ p{
     border-radius:30px;
 }
 .panstack2{
-    top: 26px;
-    left: 25px;
+    transform: translate(25px, 26px);
     position: relative;
     background-color: #d8b173;
     height: 10px;
@@ -138,8 +134,7 @@ p{
     border-radius:30px;
 }
 .panstack3{
-    top: 6px;
-    left: 25px;
+    transform: translate(25px, 6px);
     position: relative;
     background-color: #fbd490;
     height: 10px;
@@ -147,8 +142,7 @@ p{
     border-radius:30px;
 }
 .panstack4{
-    top: -14px;
-    left: 25px;
+    transform: translate(25px, -14px);
     position: relative;
     background-color: #a46f3e;
     height: 10px;
@@ -156,8 +150,7 @@ p{
     border-radius:30px;
 }
 .cherry1{
-    top: -40px;
-    left: 60px;
+    transform: translate(60px, -38px);
     position: relative;
     background-color: #FA1754;
     height: 15px;
@@ -165,8 +158,7 @@ p{
     border-radius:100px;
 }
 .cherry2{
-    top: -55px;
-    left: 75px;
+    transform: translate(75px, -53px);
     position: relative;
     background-color: #FA1754;
     height: 15px;
@@ -174,8 +166,7 @@ p{
     border-radius:100px;
 }
 .cherry3{
-    top: -82px;
-    left: 67px;
+    transform: translate(68px, -80px);
     position: relative;
     background-color: #FA1754;
     height: 15px;
@@ -183,8 +174,7 @@ p{
     border-radius:100px;
 }
 .syrup1{
-    top: -65px;
-    left: 55px;
+    transform: translate(55px, -65px);
     position: relative;
     background-color: #a46f3e;
     height: 40px;
@@ -192,7 +182,7 @@ p{
     border-radius:30px;
 }
 .syrup2{
-    top: -105px;
+    transform: translate(0px, -105px);
     left: 75px;
     position: relative;
     background-color: #a46f3e;
